2003-12-04	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* console/Makefile.am: Remove all: $(ARCH)..
	* i2c/Makefile.am: Remove all: $(ARCH)..
	* nvram/Makefile.am: Remove all: $(ARCH)..
	* startup/Makefile.am: Remove all: $(ARCH)..
	* tod/Makefile.am: Remove all: $(ARCH)..
	* wrapup/Makefile.am: Remove all: $(ARCH).
	Remove bogus wildcard from CPU_PIECES..

2003-12-03	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Cosmetics.
	* console/Makefile.am: Cosmetics.
	* i2c/Makefile.am: Cosmetics.
	* nvram/Makefile.am: Cosmetics.
	* start/Makefile.am: Cosmetics.
	* startup/Makefile.am: Cosmetics.
	* tod/Makefile.am: Cosmetics.
	* wrapup/Makefile.am: Cosmetics.

2003-12-03	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Add preinstallation dirstamp support.
	* console/Makefile.am: Cosmetics.
	* i2c/Makefile.am: Cosmetics.
	* nvram/Makefile.am: Cosmetics.
	* startup/Makefile.am: Cosmetics.
	* tod/Makefile.am: Cosmetics.
	* wrapup/Makefile.am: Cosmetics.

2003-12-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* start/Makefile.am: Remove all-local: $(ARCH).

2003-09-29	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Merge-in include/Makefile.am.
	Reflect changes to bsp.am.
	* include/Makefile.am: Remove.
	* configure.ac: Reflect changes above.

2003-09-04	Joel Sherrill <joel@OARcorp.com>

	* README, console/console.c, i2c/i2c.c, i2c/i2cdrv.c, include/bsp.h,
	include/ds1307.h, include/i2c.h, include/i2cdrv.h, include/nvram.h,
	nvram/nvram.c, start/start.S, startup/bspclean.c, startup/bspstart.c,
	startup/gdbinit, startup/init5206e.c, startup/linkcmds,
	startup/linkcmds.flash, tod/ds1307.c, tod/todcfg.c, tools/runtest:
	URL for license changed.

2003-08-20	Joel Sherrill <joel@OARcorp.com>

	* console/console.c, start/start.S, startup/bspclean.c,
	startup/bspstart.c, startup/init5206e.c: Correct copyright
	statements.

2003-08-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved aclocal/.
