@@ -23,8 +23,7 @@ $(PGM): $(OBJS)
 
 # the .rel file built here will be put into libbsp.a by ../wrapup/Makefile
 
-all: $(OBJS) $(PGM)
-
+all-local: $(OBJS) $(PGM)
 .PRECIOUS: $(PGM)
 
 EXTRA_DIST = ds1307.c todcfg.c
